crates/damask/tests/ui/template_without_path.stderr
error: expected attribute arguments in parentheses: #[template(...)]
 --> tests/ui/template_without_path.rs:4:3
  |
4 | #[template]
  |   ^^^^^^^^
