crates/damask/tests/ui/template_without_path.rs
use damask::Component;

#[derive(Component)]
#[template]
struct Bad {
    x: u32,
}

fn main() {}
